# Converge-AI

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup_auth.py  verify_email.py
src/: __init__.py  config.py  database.py  main.py
src/agent/: __init__.py  core.py  middleware.py
src/mcp/: __init__.py  email_calendar_integration.py  registry.py
src/mcp/core/: context_builder.py  permissions.py  server.py
src/mcp/integrations/calendar/: reader.py  service.py  writer.py
src/mcp/integrations/gmail/: reader.py  sender.py  service.py
src/mcp/tools/: calendar_tools.py  email_tools.py
src/memory/: __init__.py  mem0_client.py
src/rag/: __init__.py  embeddings.py  indexer.py  retriever.py  vectorstore.py
src/scheduler/: __init__.py  tasks.py
src/slack/: __init__.py  app.py  tools.py
src/utils/: __init__.py  logger.py
