[project]
name = "ai-assistant"
version = "0.1.0"
description = "Slack AI Assistant with RAG, Memory, and MCP integration using Gemini"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # Core Framework
    "fastapi>=0.128.5",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.6.0",
    
    # AI & LLM - LangChain v1 (compatible versions)
    "langchain>=0.3.0",
    "langgraph>=0.2.0",
    "langchain-google-genai>=2.0.0",
    "langchain-community>=0.3.0",
    
    # Google Gemini
    "google-generativeai>=0.8.0",
    
    # Memory & RAG
    "mem0ai>=1.0.3",
    "chromadb>=1.4.1",
    
    # Slack Integration
    "slack-bolt>=1.27.0",
    "slack-sdk>=3.39.0",
    
    # Database
    "sqlalchemy>=2.0.46",
    
    # Task Scheduling
    "apscheduler>=3.11.2",
    
    # Utilities
    "python-dotenv>=1.0.1",
    "httpx>=0.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatchling.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]
